--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -57,9 +57,17 @@ doctrine:
         auto_mapping: true
 
 # Swiftmailer Configuration
+#swiftmailer:
+    #transport: %mailer_transport%
+    #host:      %mailer_host%
+    #username:  %mailer_user%
+    #password:  %mailer_password%
+    #spool:     { type: memory }
 swiftmailer:
-    transport: %mailer_transport%
-    host:      %mailer_host%
-    username:  %mailer_user%
-    password:  %mailer_password%
-    spool:     { type: memory }
+    transport:  smtp
+    encryption: ~
+    auth_mode:  login
+    host:       smtp.163.com
+    username:   quickresearch_1@163.com
+    password:   quickresearch
+
