--- a/src/Jili/ApiBundle/Resources/config/routing.yml
+++ b/src/Jili/ApiBundle/Resources/config/routing.yml
@@ -14,3 +14,7 @@ callboard:
     resource: "@JiliApiBundle/Controller/CallboardController.php"
     prefix:   /callboard
     type:     annotation
+api:
+    resource: "@JiliApiBundle/Controller/ApiController.php"
+    prefix:   /api
+    type:     annotation
