--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
 eclipse.preferences.version=1
+encoding//src/Jili/ApiBundle/Resources/views/Default/about.html.twig=UTF-8
 encoding//src/Jili/ApiBundle/Resources/views/Default/index.html.twig=UTF-8
 encoding//src/Jili/ApiBundle/Resources/views/User/login.html.twig=UTF-8
 encoding//src/Jili/ApiBundle/Resources/views/User/mission.html.twig=UTF-8
