--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -79,7 +79,7 @@ knp_paginator:
     template:
         pagination: KnpPaginatorBundle:Pagination:sliding.html.twig     # sliding pagination controls template
         sortable: KnpPaginatorBundle:Pagination:sortable_link.html.twig # sort link template
-        
+gregwar_captcha: ~        
 services:
     knp_paginator.subscriber.paginate:
         class: Knp\Component\Pager\Event\Subscriber\Paginate\PaginationSubscriber
