--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "sensio/generator-bundle": "2.2.*",
         "jms/security-extra-bundle": "1.4.*",
         "jms/di-extra-bundle": "1.3.*",
-        "knplabs/knp-paginator-bundle": "dev-master"
+        "knplabs/knp-paginator-bundle": "dev-master",
+        "gregwar/captcha-bundle": "dev-master"
     },
     "scripts": {
         "post-install-cmd": [
