--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -89,7 +89,11 @@ services:
         class: Knp\Component\Pager\Event\Subscriber\Sortable\SortableSubscriber
         tags:
             - { name: knp_paginator.subscriber }
-
+gregwar_captcha:
+        width: 100
+        height: 35
+        length: 4
+        as_url: true
 
 parameters:
     upload_tmp_dir: uploads/user/
