--- a/app/config/parameters.yml
+++ b/app/config/parameters.yml
@@ -1,11 +1,12 @@
 parameters:
     database_driver:   pdo_mysql
-    database_host:     192.168.1.235
+    #database_host:     192.168.1.235
+    database_host:     127.0.0.1
     database_port:     ~
     database_name:     jili_db
     database_user:     root
-    database_password: ecnavi
-
+    #database_password: ecnavi
+    database_password: 123456
     mailer_transport:  smtp
     mailer_host:       127.0.0.1
     mailer_user:       ~
