--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -66,7 +66,7 @@ swiftmailer:
     encryption: ~
     auth_mode:  login
     host:       smtp.exmail.qq.com
-    username:   signup@91jili.com
+    username:   account@91jili.com
     password:   91jili
 
 knp_paginator:
