--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -104,6 +104,8 @@ gregwar_captcha:
         as_url: true
 
 parameters:
+    admin_home_ip: 192.168.1.198
+    admin_ip: 112.65.174.206
     upload_banner_dir: images/banner/
     upload_adver_dir: images/actionPic/
     upload_tmp_dir: uploads/user/
