--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -105,6 +105,7 @@ gregwar_captcha:
 
 parameters:
     admin_home_ip: 192.168.1.198
+    admin_vpn_ip: 210.175.54.14
     admin_ele_ip: 112.65.174.206
     admin_un_ip: 180.169.71.34
     upload_banner_dir: images/banner/
