--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -124,6 +124,11 @@ parameters:
     init_seven: 7
     init_eight: 8
     init_nine: 9
+    init_eleven: 11
+    init_twelve: 12
+    init_thirteen: 13
+    init_fourteen: 14
+    init_fifteen: 15
     init_fivty: 50
     reg_mobile: 除手机号码外都为必填项
     game_type: 小鸡找米
@@ -133,6 +138,7 @@ parameters:
     game_rank: 游戏排名
     game_attend: 游戏全勤
     game_attend: 游戏全勤
+    card_record: 名片录力
     certified: 已认证
     nothrough: 已拒绝
     reg_en_mail: 请输入邮箱地址
@@ -151,9 +157,14 @@ parameters:
     update_se_sex: 请选择性别
     update_wr_mobile: 输入的手机格式不正确
     exchange_en_wen: 请输入您的91问问账号
+    exchange_en_alipay: 请输入您的支付宝账号
+    exchange_en_mobile: 请输入您的手机号码
     exchange_wr_mail: 91问问账号应是邮件格式
+    exchange_wr_alipay: 支付宝账号应是邮件格式
     exchange_su_bind: 已成功兑换，等待账号绑定
     exchange_wr_point: 兑换失败，积分错误
+    exchange_unsame_mobile: 2次输入的手机号码不相同
+    exchange_unsame_alipay: 2次输入的支付宝账号不相同
     forget_en_pwd: 请输入用户密码
     forget_wr_pwd: 用户密码为6-20个字符，不能含特殊符号
     forget_unsame_pwd: 2次输入的用户密码不相同
@@ -164,6 +175,29 @@ parameters:
     change_wr_pwd: 用户密码为6-20个字符，不能含特殊符号
     change_unsame_pwd: 2次输入的用户密码不相同
     chnage_no_email: 邮箱地址未注册
+    exchange_ing_amazon_tilte: “亚马逊礼品卡”兑换申请
+    exchange_ing_alipay_tilte: 支付宝充值兑换申请
+    exchange_ing_mobile_tilte: 手机费兑换申请
+    exchange_ing_amazon_content: 亲爱的<br/><br/>我们已经收到您的“亚马逊礼品卡”兑换申请，兑换会在三个工作日内完成（遇周末及节假日顺延）。<br/>请关注您的<a href="http://www.91jili.com/user/exchange/2/1"  target="_blank">兑换历史</a>，来及时了解兑换状态。如果兑换失败，积分会自动返还到您的积粒网帐户。<br/><br/>积粒网运营中心
+    exchange_ing_alipay_content: 亲爱的<br/><br/>您好！我们已经收到了您的支付宝充值申请，我们将在10个工作日内完成支付宝充值手续。<br/>请关注您的<a href="http://www.91jili.com/user/exchange/3/1"  target="_blank">兑换历史</a>，来及时了解兑换状态。如果兑换失败，积分会自动返还到您的积粒网帐户。<br/><br/>积粒网运营中心
+    exchange_ing_mobile_content: 亲爱的<br/><br/>我们已经收到您的手机费兑换申请，兑换会在三个工作日内完成（遇周末及节假日顺延）。<br/>请关注您的<a href="http://www.91jili.com/user/exchange/4/1"  target="_blank">兑换历史</a>，来及时了解兑换状态。如果兑换失败，积分会自动返还到您的积粒网帐户。<br/><br/>积粒网运营中心
+    exchange_finish_amazon_tilte: “亚马逊礼品卡”兑换成功
+    exchange_finish_alipay_tilte: 支付宝充值兑换成功
+    exchange_finish_mobile_tilte: 手机费兑换成功
+    exchange_finish_amazon_content: 亲爱的<br/><br/>您好！您的“亚马逊礼品卡”兑换申请已经处理成功，<br/>请在<a href="http://www.91jili.com/user/exchange/2/1"  target="_blank">兑换历史</a>中查看您的“亚马逊礼品卡”卡号。<br/><br/>如有问题，请联系我们的网站客服人员。<br/><a href="https://www.91wenwen.net/support/"  target="_blank">https://www.91wenwen.net/support/</a><br/><br/>积粒网运营中心
+    exchange_finish_alipay_content: 亲爱的<br/><br/>您好！您的支付宝充值申请已经处理成功，请及时查看您的支付宝余额。<br/><br/>如有问题，请联系我们的网站客服人员。<br/><a href="https://www.91wenwen.net/support/" target="_blank">https://www.91wenwen.net/support/</a><br/><br/>积粒网运营中心
+    exchange_finish_mobile_content: 亲爱的<br/><br/>您好！您的手机费兑换申请已经处理成功，请及时查看您的手机余额。<br/><br/>如有问题，请联系我们的网站客服人员。<br/><a href="https://www.91wenwen.net/support/" target="_blank">https://www.91wenwen.net/support/</a><br/><br/>积粒网运营中心
+    exchange_finish_wenwen_title: 91问问积分兑换成功
+    ecchange_finish_wenwen_content: 亲爱的<br/><br/>您好！您从91问问网站上申请的兑换已经处理成功，米粒已经发放至您的积粒网账户，请及时查看您的米粒余额。<br/><br/>如有问题，请联系我们的网站客服人员。<br/><a href="https://www.91wenwen.net/support/" target="_blank">https://www.91wenwen.net/support/</a><br/><br/>积粒网运营中心
+    exchange_fail_amazon_tilte: “亚马逊礼品卡”兑换失败
+    exchange_fail_alipay_tilte: 支付宝充值兑换失败
+    exchange_fail_mobile_tilte: 手机费兑换失败
+    exchange_fail_amazon_content: 亲爱的<br/><br/>您好！非常抱歉，您的“亚马逊礼品卡”申请兑换失败，积分已自动返还到您的积粒网帐户。<br/><br/>如有问题，请联系我们的网站客服人员。<br/><a href="https://www.91wenwen.net/support/" target="_blank">https://www.91wenwen.net/support/</a><br/><br/>积粒网运营中心
+    exchange_fail_alipay_content: 亲爱的<br/><br/>您好！非常抱歉，您的支付宝充值申请兑换失败，积分已自动返还到您的积粒网帐户。<br/><br/>如有问题，请联系我们的网站客服人员。<br/><a href="https://www.91wenwen.net/support/" target="_blank">https://www.91wenwen.net/support/</a><br/><br/>积粒网运营中心
+    exchange_fail_mobile_content: 亲爱的<br/><br/>您好！非常抱歉，您的手机费申请兑换失败，积分已自动返还到您的积粒网帐户。<br/><br/>如有问题，请联系我们的网站客服人员。<br/><a href="https://www.91wenwen.net/support/" target="_blank">https://www.91wenwen.net/support/</a><br/><br/>积粒网运营中心
+    card_number_is_null: 请输入您的身份证号码
+    card_number_is_error: 身份证号码错误
+
 
 
 
