--- a/src/Jili/ApiBundle/Resources/config/routing.yml
+++ b/src/Jili/ApiBundle/Resources/config/routing.yml
@@ -50,3 +50,7 @@ checkin:
     resource: "@JiliApiBundle/Controller/CheckinController.php"
     prefix:   /checkin
     type:     annotation
+topcron:
+    resource: "@JiliApiBundle/Controller/TopCronController.php"
+    prefix:   /topcron
+    type:     annotation
