--- a/src/Jili/ApiBundle/Resources/config/services.yml
+++ b/src/Jili/ApiBundle/Resources/config/services.yml
@@ -1,7 +1,9 @@
 parameters:
-#    jili_api.example.class: Jili\ApiBundle\Example
+    login.listener.class: Jili\ApiBundle\EventListener\LoginListener
 
 services:
-#    jili_api.example:
-#        class: %jili_api.example.class%
-#        arguments: [@service_id, "plain_value", %parameter%]
+    login.listener:
+        class: %login.listener.class%
+        calls:
+            - [setContainer, ["@service_container"] ] 
+        arguments: [ "@doctrine.orm.entity_manager" ]
