--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -1,5 +1,6 @@
 imports:
     - { resource: parameters.yml }
+    - { resource: custome_parameters.yml }
     - { resource: security.yml }
 framework:
     #esi:             ~
