--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -200,3 +200,5 @@ parameters:
     file_path_recent_point: /data/91jili/topcron_recentpoint.log
     file_path_ranking_month: /data/91jili/topcron_rankingmonth.log
     file_path_ranking_year: /data/91jili/topcron_rankingyear.log
+    register_success_campaign_id: 7
+    register_success_mailing_id: 58
