--- a/src/Jili/ApiBundle/Resources/config/services.yml
+++ b/src/Jili/ApiBundle/Resources/config/services.yml
@@ -1,9 +1,12 @@
 parameters:
     login.listener.class: Jili\ApiBundle\EventListener\LoginListener
+    soap.mail.listener.class: Jili\ApiBundle\EventListener\SoapMailListener
 
 services:
     login.listener:
         class: %login.listener.class%
         calls:
-            - [setContainer, ["@service_container"] ] 
-        arguments: [ "@doctrine.orm.entity_manager" ]
+            - [setContainer, ["@service_container"]]
+        arguments: ["@doctrine.orm.entity_manager"]
+    soap.mail.listener:
+        class: %soap.mail.listener.class%
