#282 added activity managerment in admin page

--- a/src/Jili/ApiBundle/Resources/config/routing.yml
+++ b/src/Jili/ApiBundle/Resources/config/routing.yml
@@ -59,3 +59,8 @@ api-offerwow:
     type:     annotation
     prefix:   /
 
+admin-adActivity:
+    resource: "@JiliApiBundle/Controller/AdminAdActivityController.php"
+    prefix:   /admin/adv/activity
+    type:     annotation
+
