--- a/src/Jili/ApiBundle/Resources/config/routing.yml
+++ b/src/Jili/ApiBundle/Resources/config/routing.yml
@@ -58,4 +58,8 @@ api-offerwow:
     resource: "@JiliApiBundle/Controller/OfferwowController.php"
     type:     annotation
     prefix:   /
+remind:
+    resource: "@JiliApiBundle/Controller/RemindController.php"
+    type:     annotation
+    prefix:   /
 
