--- a/src/Jili/BackendBundle/Resources/config/services.yml
+++ b/src/Jili/BackendBundle/Resources/config/services.yml
@@ -3,11 +3,13 @@ parameters:
 
 #    jili_api.api.class: Jili\ApiBundle\Controller\ApiController
 #    jili_api.offerwow.class: Jili\ApiBundle\Controller\OfferwowController
-#
+
 services:
      authentication_ip.action_listener:
         class: %authentication_ip.action_listener.class%
-        arguments: [ [%admin_home_ip%,  %admin_vpn_ip%,    %admin_ele_ip%,    %admin_un_ip% , 127.0.0.1 , 192.168.1.47] ]
+        calls:
+            - [setContainer, ["@service_container"] ] 
+        arguments: [ [%admin_home_ip%,  %admin_vpn_ip%,    %admin_ele_ip%,    %admin_un_ip% , 127.0.0.1] ]
         tags:
             - { name: kernel.event_listener, event: kernel.controller, method: onKernelController }
 #    jili_api.api:
