added emar cps analog page in admin menu . issue #249

--- a/src/Jili/EmarBundle/Resources/config/routing.yml
+++ b/src/Jili/EmarBundle/Resources/config/routing.yml
@@ -1,3 +1,6 @@
+emar-analog:
+    resource: "@JiliEmarBundle/Controller/AnalogController.php"
+    type:     annotation
 emar-api:
     resource: "@JiliEmarBundle/Controller/ApiController.php"
     type:     annotation
