--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -208,3 +208,4 @@ parameters:
     remind_login_campaign_id: 9
     remind_login_mailing_id: 63
     file_path_advertiserment_check: /data/91jili/advertiserment_check.log
+    file_path_emergency_announcement: /data/91jili/emergency_announcement.log
