--- a/src/Jili/ApiBundle/Resources/config/services.yml
+++ b/src/Jili/ApiBundle/Resources/config/services.yml
@@ -11,6 +11,8 @@ parameters:
 
     rebate_activity.caculator.class: Jili\ApiBundle\EventListener\RebateActivity
 
+    check_in.listener.class: Jili\ApiBundle\EventListener\CheckInListener
+
 services:
     login.listener:
         class: %login.listener.class%
@@ -52,7 +54,8 @@ services:
             - [setRebatePointCaculator, ["@rebate_point.caculator"] ]
 
         arguments: [ "@logger","@doctrine.orm.entity_manager" ]
-
-
-
-
+    check_in.listener:
+        class: %check_in.listener.class%
+        calls:
+            - [setContainer, ["@service_container"]]
+        arguments: ["@doctrine.orm.entity_manager"]
