--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -36,7 +36,7 @@ twig:
             websiteid: %offerwow_com.websiteid%  
         emar_cps:
             category_id: %emar_com.cps.category_type%
-
+        emar_page_size: %emar_com.page_size%
 # Assetic Configuration
 assetic:
     debug:          %kernel.debug%
