--- a/app/config/custome_parameters.yml
+++ b/app/config/custome_parameters.yml
@@ -17,3 +17,6 @@ parameters:
     emar_com.cps.category_type: 18 # in ad_category table where cateogry_name ='emar' ??
     emar_com.cps.task_type: 1 
 
+    emar_com.app_AppKey: '139216929186018017' 
+    emar_com.app_AppSecret: 'e7c5367e1ba7d609865389640007df3e'
+    emar_com.page_size: 17 
