--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -209,5 +209,7 @@ parameters:
     remind_login_mailing_id: 75
     remind_point_campaign_id: 11
     remind_point_mailing_id: 72
+    remind_total_point_campaign_id: 12
+    remind_total_point_mailing_id: 80
     file_path_advertiserment_check: /data/91jili/advertiserment_check.log
     file_path_emergency_announcement: /data/91jili/emergency_announcement.log
