--- a/app/config/custome_parameters.yml
+++ b/app/config/custome_parameters.yml
@@ -20,3 +20,5 @@ parameters:
     emar_com.app_AppKey: '139216929186018017' 
     emar_com.app_AppSecret: 'e7c5367e1ba7d609865389640007df3e'
     emar_com.page_size: 17 
+    emar_com.max_of_total: 1800 
+    
