--- a/app/config/custome_parameters.yml
+++ b/app/config/custome_parameters.yml
@@ -21,6 +21,7 @@ parameters:
     emar_com.app_AppSecret: 'e7c5367e1ba7d609865389640007df3e'
 
     emar_com.page_size: 20 
+    emar_com.page_size_of_shoplist: 30 
     emar_com.max_of_total: 1800 
 
     emar_com.api.orderby_range: [1,2,3] 
