Upload the shared

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -38,6 +38,8 @@ twig:
             category_id: %emar_com.cps.category_type%
         emar_page_size: %emar_com.page_size%
         emar_page_size_shoplist: %emar_com.page_size_of_shoplist%
+        emar_page_size_search: %emar_com.page_size_of_search% 
+
         emar_max_of_total: %emar_com.max_of_total%
         emar_api_orderby_range: %emar_com.api.orderby_range% # [1,2,3] 
         emar_api_orderby_default: %emar_com.api.orderby_default% # 1 
