--- a/app/config/custome_parameters.yml
+++ b/app/config/custome_parameters.yml
@@ -18,8 +18,13 @@ parameters:
     emar_com.cps.task_type: 1 
 
 # jili
-    emar_com.app_AppKey: '139216929186018017' 
-    emar_com.app_AppSecret: 'e7c5367e1ba7d609865389640007df3e'
+# 139597428026718017
+# AppSecret：53a77a65327cdd28bff99da8f9f542cf
+    emar_com.app_AppKey: '139597428026718017' 
+    emar_com.app_AppSecret: '53a77a65327cdd28bff99da8f9f542cf'
+#
+#j  emar_com.app_AppKey: '139216929186018017' 
+#   emar_com.app_AppSecret: 'e7c5367e1ba7d609865389640007df3e'
 
 #    $sdk =array('1326528120671', '4090a94e6c98c2a3c3cf1634cdf29730');
     emar_com.sdk.app_AppKey: '1326528120671'
